<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorPrimaryDark"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".SubmitProjectActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/gads_banner" />


        </androidx.appcompat.widget.Toolbar>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/project_text_margin_bottom"
            android:layout_marginBottom="@dimen/project_text_margin_bottom"
            android:gravity="center"
            android:text="@string/project_submission_txt"
            android:textColor="@color/btnTextColor"
            android:textSize="@dimen/project_txt_size" />


        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="@dimen/layout_margin"
            android:background="@color/btnTextColor" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:orientation="horizontal"
            android:weightSum="4">


            <EditText
                android:id="@+id/et_first_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/space_btn"
                android:layout_weight="2"
                android:autofillHints="@string/hint_first_name"
                android:background="@drawable/btn_corner"
                android:hint="@string/hint_first_name"
                android:inputType="textPersonName"
                android:padding="@dimen/et_padding" />

            <EditText
                android:id="@+id/et_last_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:autofillHints="@string/hint_last_name"
                android:background="@drawable/btn_corner"
                android:hint="@string/hint_last_name"
                android:inputType="textPersonName"
                android:padding="@dimen/et_padding" />

        </LinearLayout>


        <EditText
            android:id="@+id/et_email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:layout_marginTop="@dimen/et_margin"
            android:autofillHints="@string/hint_last_name"
            android:background="@drawable/btn_corner"
            android:hint="@string/hint_email_address"
            android:inputType="textEmailAddress"
            android:padding="@dimen/et_padding" />


        <EditText
            android:id="@+id/et_github_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:layout_marginTop="@dimen/et_margin"
            android:autofillHints="@string/hint_last_name"
            android:background="@drawable/btn_corner"
            android:hint="@string/hint_github_link"
            android:inputType="textUri"
            android:padding="@dimen/et_padding" />


        <Button
            android:id="@+id/submit_project_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/round_btn"
            android:padding="10dp"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/white_color"
            android:textSize="@dimen/project_txt_size" />


    </LinearLayout>

</androidx.core.widget.NestedScrollView>